--- a/4c.html
+++ b/4c.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Card Hover Interactions</title>
+  <title>4 C's</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="select.css">
 
@@ -13,37 +13,41 @@
   <div class="card">
     <div class="content">
       <h2 class="title">Citra</h2>
-      <p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
-      <button class="btn">Click Me</button>
+      <p class="copy">Seriously citrusy</p>
+	  <a href="cards/citra.html">
+		<button class="btn">View</button>
+	  </a>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <h2 class="title">Chinook</h2>
-      <p class="copy">Plan your next beach trip with these fabulous destinations</p>
-      <a href="index.html">
-		<button class="btn">View Trips</button>
+      <p class="copy">A good mix of fruits and spices</p>
+      <a href="cards/chinook.html">
+		<button class="btn">View</button>
 	  </a>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <h2 class="title">Centennial</h2>
-      <p class="copy">It's the desert you've always dreamed of</p>
-      <button class="btn">Book Now</button>
+      <p class="copy">Floral and grapefruit</p>
+	  <a href="cards/centennial.html">
+		<button class="btn">View</button>
+	  </a>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <h2 class="title">Cascade</h2>
-      <p class="copy">Seriously, straight up, just blast off into outer space today</p>
-      <button class="btn">Book Now</button>
+      <p class="copy">Spicy citrus</p>
+	  <a href="cards/cascade.html">
+		<button class="btn">View</button>
+	  </a>
     </div>
   </div>
 </main>
-<a href="index.html">
-    <button class="learn-more">Go Home</button>
-  </a>
+
 <!-- partial -->
   
 </body>
