--- a/cards/hallertau.html
+++ b/cards/hallertau.html
@@ -3,23 +3,23 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Cascade</title>
+	<title>Hallertau</title>
 	<link rel="stylesheet" href="./style.css">
 	<style>
 		.carousel-item--1 .carousel-item__image {
-			background-image: url('../images/cascade_hop.jpg');
+			background-image: url('../images/hm_hop.jpg');
 		}
 
 		.carousel-item--2 .carousel-item__image {
-			background-image: url('../images/cascade_tea.jpg');
+			background-image: url('../images/hm_tea.jpg');
 		}
 
 		.carousel-item--3 .carousel-item__image {
-			background-image: url('../images/oregon.png');
+			background-image: url('../images/hallertau.jpg');
 		}
 
 		.carousel-item--4 .carousel-item__image {
-			background-image: url('../images/albert.jpg');
+			background-image: url('../images/red_belgian.jpg');
 		}
 	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,12 +45,12 @@
 				<div class="carousel-item__image"></div>
 				<div class="carousel-item__info">
 					<div class="carousel-item__container">
-						<h2 class="carousel-item__subtitle">Cascade </h2>
+						<h2 class="carousel-item__subtitle">Hallertau </h2>
 						<h1 class="carousel-item__title">Flavor Profile</h1>
 
 						<p class="carousel-item__description">
-							Grapefruit, orange, with heavy spicy and piney notes. Mainly used as an aroma agent, but can be used for bittering. 
-							4.5% ~ 8.9% alpha acid composition.
+							Strong pine with hints of flowers and citrus fruit. Used as an aroma hop. 
+							Around 3.5% alpha acid composition.
 						</p>
 
 					</div>
@@ -60,7 +60,7 @@
 				<div class="carousel-item__image"></div>
 				<div class="carousel-item__info">
 					<div class="carousel-item__container">
-						<h2 class="carousel-item__subtitle">Cascade </h2>
+						<h2 class="carousel-item__subtitle">Hallertau </h2>
 						<h1 class="carousel-item__title">Tea </h1>
 
 
@@ -72,26 +72,25 @@
 				<div class="carousel-item__image"></div>
 				<div class="carousel-item__info">
 					<div class="carousel-item__container">
-						<h2 class="carousel-item__subtitle">Cascade</h2>
+						<h2 class="carousel-item__subtitle">Hallertau</h2>
 						<h1 class="carousel-item__title">Origin</h1>
 						<p class="carousel-item__description">
-							From Oregon, US. Developed at Oregon State University as part of USDA breeding program. 
-							Named after the Cascade Mountain Range in Washington, US.
+							From Hallertau in Bavaria, Germany.
 						</p>
 					</div>
 				</div>
 			</div>
 	
 			<div class="carousel-item carousel-item--4">
-				<div class="carousel-item__image"></a></div>
+				<div class="carousel-item__image"></div>
 				<div class="carousel-item__info">
 					<div class="carousel-item__container">
-						<h2 class="carousel-item__subtitle">Cascade</h2>
+						<h2 class="carousel-item__subtitle">Hallertau</h2>
 						<h1 class="carousel-item__title">Beer</h1>
 						<p class="carousel-item__description">
-							Popular styles include Barley Wine, American Pale Ale, Ale, and Lager.
+							Popular styles include German Pilsner, Pale Ale, Wheat, and American Lager.
 						</p>
-						<a href="https://www.ratebeer.com/tag/cascade/" class="carousel-item__btn">Explore Cascade
+						<a href="https://www.ratebeer.com/tag/hallertau/" class="carousel-item__btn">Explore Hallertau
 							Beers</a>
 					</div>
 				</div>
