--- a/noble.html
+++ b/noble.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <title>Noble</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <style>
+	.card:nth-child(1):before {
+	background-image: url(https://unsplash.com/photos/EYlaFOsKJ2A/download?force=true&w=640);
+	}
+	.card:nth-child(2):before {
+	background-image: url(https://images.unsplash.com/photo-1616235352608-0c314f4b9027?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80);
+	}
+	.card:nth-child(3):before {
+	background-image: url(https://images.unsplash.com/photo-1619271121705-61b5c3faaae9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80);
+	}
+	.card:nth-child(4):before {
+	background-image: url(https://images.unsplash.com/photo-1619410083034-a46d48ddf794?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80);
+	}
+  </style>
 <link rel="stylesheet" href="select.css">
 
 </head>
@@ -12,7 +26,7 @@
 		<div class="card">
 		  <div class="content">
 			<h2 class="title">Saaz</h2>
-			<p class="copy">Seriously citrusy</p>
+			<p class="copy">Spicy fruit</p>
 			<a href="cards/saaz.html">
 			  <button class="btn">View</button>
 			</a>
@@ -21,8 +35,8 @@
 		<div class="card">
 		  <div class="content">
 			<h2 class="title">Hersbrucker</h2>
-			<p class="copy">A good mix of fruits and spices</p>
-			<a href="cards/chinook.html">
+			<p class="copy">Flowerly pine</p>
+			<a href="cards/hersbrucker.html">
 			  <button class="btn">View</button>
 			</a>
 		  </div>
@@ -30,8 +44,8 @@
 		<div class="card">
 		  <div class="content">
 			<h2 class="title">Splat</h2>
-			<p class="copy">Floral and grapefruit</p>
-			<a href="cards/centennial.html">
+			<p class="copy">Earthy orange</p>
+			<a href="cards/spalt.html">
 			  <button class="btn">View</button>
 			</a>
 		  </div>
@@ -39,8 +53,8 @@
 		<div class="card">
 		  <div class="content">
 			<h2 class="title">Hallertau Mittelfrüh</h2>
-			<p class="copy">Spicy citrus</p>
-			<a href="cards/cascade.html">
+			<p class="copy">Piney tangerine</p>
+			<a href="cards/hallertau.html">
 			  <button class="btn">View</button>
 			</a>
 		  </div>
